[project]
name = "vibe-trade-api"
version = "0.1.0"
description = "API server for vibe-trade with JWT authentication"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "google-cloud-firestore>=2.14.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    # vibe-trade-mcp>=0.1.2 is installed separately (see Makefile install target)
    # It's from GCP Artifact Registry which requires authentication
    # For local dev: make install uses gcloud auth print-access-token
    # For Docker: Uses BuildKit secrets or Cloud Build service account
    "keyrings-google-artifactregistry-auth>=1.1.2",
]

# GCP Artifact Registry index for vibe-trade-mcp package
# For local dev: Use gcloud auth application-default login + keyring
# For Docker/Cloud Build: Authentication is automatic via service account credentials
[[tool.uv.index]]
name = "gcp-artifact-registry"
url = "https://us-central1-python.pkg.dev/vibe-trade-475704/vibe-trade-python/simple/"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

